p3/confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: playground
  template:
    metadata:
      labels:
        app.kubernetes.io/name: playground
    spec:
      containers:
        - name: playground
          image: wil42/playground:v2
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: playground-service
spec:
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: http
      nodePort: 8888
  selector:
    app.kubernetes.io/name: playground
  type: NodePort
